#704 clean up code and files